add_library(platform STATIC "longtail_platform.c" "longtail_platform.h")

add_subdirectory ("archiveblockstore")
add_subdirectory ("atomiccancel")
add_subdirectory ("bikeshed")
add_subdirectory ("blake2")
add_subdirectory ("blake3")
add_subdirectory ("blockstorestorage")
#add_subdirectory ("brotli")
add_subdirectory ("cacheblockstore")
add_subdirectory ("compressblockstore")
add_subdirectory ("compressionregistry")
add_subdirectory ("filestorage")
add_subdirectory ("fsblockstore")
add_subdirectory ("hashregistry")
add_subdirectory ("hpcdcchunker")
add_subdirectory ("lrublockstore")
add_subdirectory ("lz4")
add_subdirectory ("memstorage")
add_subdirectory ("memtracer")
add_subdirectory ("meowhash")
add_subdirectory ("ratelimitedprogress")
add_subdirectory ("shareblockstore")
add_subdirectory ("zstd")
