add_library(
	brotli OBJECT
	"longtail_brotli.c"
	"longtail_brotli.h"

	"ext/common/constants.c"
	"ext/common/constants.h"
	"ext/common/context.c"
	"ext/common/context.h"
	"ext/common/dictionary.c"
	"ext/common/dictionary.h"
	"ext/common/platform.c"
	"ext/common/platform.h"
	"ext/common/transform.c"
	"ext/common/transform.h"
	"ext/common/version.h"

	"ext/dec/bit_reader.h"
	"ext/dec/bit_reader.c"
	"ext/dec/decode.c"
	"ext/dec/huffman.h"
	"ext/dec/huffman.c"
	"ext/dec/prefix.h"
	"ext/dec/state.h"
	"ext/dec/state.c"

	"ext/enc/backward_references.c"
	"ext/enc/backward_references.h"
	"ext/enc/backward_references_hq.c"
	"ext/enc/backward_references_hq.h"
	"ext/enc/backward_references_inc.h"
	"ext/enc/bit_cost.c"
	"ext/enc/bit_cost.h"
	"ext/enc/bit_cost_inc.h"
	"ext/enc/block_encoder_inc.h"
	"ext/enc/block_splitter.c"
	"ext/enc/block_splitter.h"
	"ext/enc/block_splitter_inc.h"
	"ext/enc/brotli_bit_stream.c"
	"ext/enc/brotli_bit_stream.h"
	"ext/enc/cluster.c"
	"ext/enc/cluster.h"
	"ext/enc/cluster_inc.h"
	"ext/enc/command.c"
	"ext/enc/command.h"
	"ext/enc/compress_fragment.c"
	"ext/enc/compress_fragment.h"
	"ext/enc/compress_fragment_two_pass.c"
	"ext/enc/compress_fragment_two_pass.h"
	"ext/enc/dictionary_hash.c"
	"ext/enc/dictionary_hash.h"
	"ext/enc/encode.c"
	"ext/enc/encoder_dict.c"
	"ext/enc/encoder_dict.h"
	"ext/enc/entropy_encode.c"
	"ext/enc/entropy_encode.h"
	"ext/enc/entropy_encode_static.h"
	"ext/enc/fast_log.c"
	"ext/enc/fast_log.h"
	"ext/enc/find_match_length.h"
	"ext/enc/hash.h"
	"ext/enc/hash_composite_inc.h"
	"ext/enc/hash_forgetful_chain_inc.h"
	"ext/enc/hash_longest_match64_inc.h"
	"ext/enc/hash_longest_match_inc.h"
	"ext/enc/hash_longest_match_quickly_inc.h"
	"ext/enc/hash_rolling_inc.h"
	"ext/enc/hash_to_binary_tree_inc.h"
	"ext/enc/histogram.c"
	"ext/enc/histogram.h"
	"ext/enc/histogram_inc.h"
	"ext/enc/literal_cost.c"
	"ext/enc/literal_cost.h"
	"ext/enc/memory.c"
	"ext/enc/memory.h"
	"ext/enc/metablock.c"
	"ext/enc/metablock.h"
	"ext/enc/metablock_inc.h"
	"ext/enc/params.h"
	"ext/enc/prefix.h"
	"ext/enc/quality.h"
	"ext/enc/ringbuffer.h"
	"ext/enc/static_dict.c"
	"ext/enc/static_dict.h"
	"ext/enc/static_dict_lut.h"
	"ext/enc/utf8_util.c"
	"ext/enc/utf8_util.h"
	"ext/enc/write_bits.h"

	"ext/include/brotli/decode.h"
	"ext/include/brotli/encode.h"
	"ext/include/brotli/port.h"
	"ext/include/brotli/types.h"
)
